@@ -26,4 +26,4 @@ FROM openjdk:11
 EXPOSE 8080
 COPY --from=build /home/gradle/src/build/libs/api-0.0.1.jar /app/
 RUN bash -c 'touch /app/api-0.0.1.jar'
-ENTRYPOINT ["java", "-XX:+UnlockExperimentalVMOptions", "-XX:+UseCGroupMemoryLimitForHeap", "-Djava.security.egd=file:/dev/./urandom","-jar","/app/api-0.0.1.jar"]
+ENTRYPOINT ["java", "-jar","/app/api-0.0.1.jar"]
